<?xml version="1.0"?>
<package>
  <name>lab1</name>
  <version>1.0.0</version>
  <description>Lab1</description>
  
 <maintainer email="todo@elka.pw.edu.pl">Kowalski</maintainer>

  <license>BSD</license>
  <author>rzewnicki_kowalski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
